fixed overflow and scrollbar
fixed overflow-x showing on the body and made scrollbar transparent when Y scrolling on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,6 +80,17 @@ body {
   html {
     background-color: #fff;
   }
+  body::-webkit-scrollbar {
+    width: 0.5em;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  body::-webkit-scrollbar-track-vertical {
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
 
 /*
